--- a/catalog/templates/catalog/includes/inc_base.html
+++ b/catalog/templates/catalog/includes/inc_base.html
@@ -1,4 +1,5 @@
 {% extends 'catalog/base.html' %}
+{% load custom_tags %}
 {% block content %}
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
         <h1 class="display-4 fw-normal text-body-emphasis">
@@ -20,8 +21,7 @@
                                     {{ object.description }}
                                 </small>
                             </h1>
-                            <img src="/media/{{ object.photo }}"/>
-{#                            <img src="{% mediapath object.image %}" />#}
+                            <img src="{% mediapath object.photo %}"  alt=""/>
                             <p>
                                 Цена: {{ object.price }} руб.
                             </p>
