--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -79,6 +79,14 @@
                     Контакты
                 </a>
             </li>
+             <li>
+                <a class="nav-link text-white" href="blog/">
+                    <svg class="bi pe-none me-2" height="16" width="16">
+                        <use href="#people-circle"></use>
+                    </svg>
+                    Блог
+                </a>
+            </li>
         </ul>
         <hr>
         <div class="dropdown">
