--- a/catalog/templates/blog/includes/inc_entry_list.html
+++ b/catalog/templates/blog/includes/inc_entry_list.html
@@ -36,6 +36,16 @@
 
                 </div>
             {% endfor %}
+            <div class="col mb-lg-auto">
+                <div>
+                    <a href="{% url 'catalog:entry_form' %}" class="btn btn-primary">
+                        Создать запись
+                    </a>
+                </div>
+
+            </div>
+
+
         </div>
     </div>
 {% endblock %}
