--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -79,7 +79,7 @@
                     Контакты
                 </a>
             </li>
-             <li>
+            <li>
                 <a class="nav-link text-white" href="blog/">
                     <svg class="bi pe-none me-2" height="16" width="16">
                         <use href="#people-circle"></use>
@@ -120,6 +120,8 @@
 
     {% block content %}
     {% endblock %}
+
+{#    <div>Создание продукта</div>#}
 
     <script src="{% static 'js/sidebars.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"
