--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,6 +1,7 @@
 {% extends 'catalog/base.html' %}
 {% load static %}
 {% load custom_tags %}
+
 {% block content %}
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
         <h1 class="display-4 fw-normal text-body-emphasis">
@@ -8,7 +9,6 @@
         </h1>
         <p></p>
         <div class="col">
-
             <div>
                 <p>
                     <img src="{% mediapath object.photo %}" alt=""/>
@@ -17,13 +17,13 @@
                 <p>
                     Цена: {{ object.price }} руб.
                 </p>
+                <a href="/product/{{ object.pk }}/update"
+                   class="btn btn-lg btn-primary"
+                   type="button">
+                    Редактировать
+                </a>
             </div>
         </div>
-
-        <a class="btn btn-lg btn-primary"
-           type="button">
-            Купить
-        </a>
 
     </div>
 {% endblock %}
