--- a/user/templates/user/user_form.html
+++ b/user/templates/user/user_form.html
@@ -2,25 +2,25 @@
 
 {% block content %}
     <div class="col">
-        {% if request.path == login_url %}
-            <h1>Авторизация</h1>
-        {% elif request.path == profile_url %}
-            <h1>Профиль</h1>
-        {% elif request.path == password_reset_url %}
-            <h1>Сброс пароля</h1>
-        {% else %}
-            <h1>Регистрация</h1>
-        {% endif %}
-        {{ request.path }}
-
-        <div>
+        <h1 class="display-4 fw-normal text-body-emphasis">
             {% url 'user:login' as login_url %}
             {% url 'user:profile' as profile_url %}
             {% url 'user:password_reset' as password_reset_url %}
-            {% if request.path == password_reset_url %}
-                Введите свою почту, мы пришлем временный пароль
+
+            {% if request.path == login_url %}
+                Авторизация
+            {% elif request.path == profile_url %}
+                Профиль
+            {% elif request.path == password_reset_url %}
+                Сброс пароля
+            {% else %}
+                Регистрация
             {% endif %}
-        </div>
+        </h1>
+
+        {% if request.path == password_reset_url %}
+            Введите свою почту, мы пришлем временный пароль
+        {% endif %}
 
         <form method="post" enctype="multipart/form-data" class="w-50">
             {% csrf_token %}
