--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -56,7 +56,7 @@
                 </a>
             </li>
             <li>
-                <a class="nav-link text-white" href="#">
+                <a class="nav-link text-white" href="categories/">
                     <svg class="bi pe-none me-2" height="16" width="16">
                         <use href="#speedometer2"></use>
                     </svg>
