--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -3,42 +3,42 @@
 
 {% block content %}
 
-    {% if user != object.user %}
-        <div class="pricing-header p-3 pb-md-4 mx-auto text-center text-danger">
-            Получите права, чтобы редактировать!
+    {#    {% if user != object.user %}#}
+    {#        <div class="pricing-header p-3 pb-md-4 mx-auto text-center text-danger">#}
+    {#            Получите права, чтобы редактировать!#}
+    {#        </div>#}
+    {#    {% else %}#}
+    <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+        <div class="text-center">
+            <h1 class="display-4 fw-normal text-body-emphasis">Продукт</h1>
         </div>
-    {% else %}
-        <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-            <div class="text-center">
-                <h1 class="display-4 fw-normal text-body-emphasis">Продукт</h1>
-            </div>
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token %}
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
 
-                {% for field in form %}
-                    <p>{{ field.label_tag }}
-                        {{ field }}</p>
-                    {% if field.errors %}
-                        <div class="alert alert-danger">
-                            <p>{{ field.errors }}</p>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-                {{ formset.management_form }}
-
-                {% for form in formset.forms %}
-                    {{ form.as_p }}
-                {% endfor %}
-
-                {% if form.non_field_errors %}
+            {% for field in form %}
+                <p>{{ field.label_tag }}
+                    {{ field }}</p>
+                {% if field.errors %}
                     <div class="alert alert-danger">
-                        <p>{{ form.non_field_errors }}</p>
+                        <p>{{ field.errors }}</p>
                     </div>
                 {% endif %}
-                <p>
-                    <button type="submit" class="btn btn-primary">Подтвердить</button>
-                </p>
-            </form>
-        </div>
-    {% endif %}
+            {% endfor %}
+            {{ formset.management_form }}
+
+            {% for form in formset.forms %}
+                {{ form.as_p }}
+            {% endfor %}
+
+            {% if form.non_field_errors %}
+                <div class="alert alert-danger">
+                    <p>{{ form.non_field_errors }}</p>
+                </div>
+            {% endif %}
+            <p>
+                <button type="submit" class="btn btn-primary">Подтвердить</button>
+            </p>
+        </form>
+    </div>
+    {#    {% endif %}#}
 {% endblock %}
